src/objects/Batch_Prep__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_ID__c</fullName>
        <label>Batch Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <formula>HYPERLINK(&quot;/apexpages/setup/listAsyncApexJobs.apexp&quot;, &quot;Monitor Batch Jobs&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <formula>HYPERLINK(&quot;/00OA00000044gnW?pv0=&quot; &amp; Id, &quot;Report on Results&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Results</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Batch Prep</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Batch_Job_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BP-{00000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Prep</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>